@@ -71,15 +71,14 @@ JHtml::_('behavior.keepalive');
 						<?php echo $this->form->getInput('language'); ?>
 					</li>
 					<!-- Tag field -->
-					<?php foreach ($this->get('form')->getFieldset('jmetadata') as $field) : ?>
-						<?php if ($field->name == 'jform[metadata][tags][]') : ?>
-							<li>
-								<?php echo $field->label; ?>
-								<?php echo $field->input; ?>
-
-							</li>
+					<li>
+						<?php if ($this->checkTags) : ?>
+							<?php echo $this->form->getLabel('tags'); ?>
+							<div class="is-tagbox">
+								<?php echo $this->form->getInput('tags'); ?>
+							</div>
 						<?php endif; ?>
-					<?php endforeach; ?>
+					</li>
 					<li>
 						<?php echo $this->form->getLabel('id'); ?>
 						<?php echo $this->form->getInput('id'); ?>
