@@ -55,14 +55,11 @@ JHtml::_('behavior.formvalidation');
 				<?php echo $this->form->getInput('language'); ?></li>
 
 				<!-- Tag field -->
-				<?php foreach ($this->get('form')->getFieldset('jmetadata') as $field) : ?>
-					<?php if ($field->name == 'jform[metadata][tags][]') :?>
-						<li>
-							<?php echo $field->label; ?>
-							<?php echo $field->input; ?>
-						</li>
-					<?php endif; ?>
-				<?php endforeach; ?>
+				<li><?php echo $this->form->getLabel('tags'); ?>
+					<div class="is-tagbox">
+						<?php echo $this->form->getInput('tags'); ?>
+					</div>
+				</li>
 
 				<li><?php echo $this->form->getLabel('id'); ?>
 				<?php echo $this->form->getInput('id'); ?></li>
